--- a/Login_Session/src/main/resources/application.properties
+++ b/Login_Session/src/main/resources/application.properties
@@ -10,3 +10,10 @@ spring.datasource.password=ssafy
 mybatis.mapper-locations=classpath:mappers/*.xml
 mybatis.type-aliases-package=com.young.mvc.model.dto
 mybatis.configuration.map-underscore-to-camel-case=true
+
+## 세션 설정
+#server.servlet.session.cookie.name=JSESSIONID
+#server.servlet.session.cookie.path=/
+#server.servlet.session.cookie.http-only=true
+#server.servlet.session.cookie.secure=false
+#server.servlet.session.tracking-modes=cookie
